export const snapshot = {};

snapshot[`confirm prompt > should confirm 1`] = `
stdout:
--------------------------
? Please confirm (y/N) › 
❯ some hint[1A[26G[G[0J
? Please confirm (y/N) › yes
❯ some hint[1A[27G[G[0J
? Please confirm (y/N) › Yes
[?25h[?25h
--------------------------
stderr:
--------------------------
--------------------------
`;

snapshot[`confirm prompt > should not confirm 1`] = `
stdout:
--------------------------
? Please confirm (y/N) › 
❯ some hint[1A[26G[G[0J
? Please confirm (y/N) › no
❯ some hint[1A[27G[G[0J
? Please confirm (y/N) › No
[?25h[?25h
--------------------------
stderr:
--------------------------
--------------------------
`;

snapshot[`confirm prompt > should not confirm by default 1`] = `
stdout:
--------------------------
? Please confirm (y/N) › 
❯ some hint[1A[26G[G[0J
? Please confirm (y/N) › No
[?25h[?25h
--------------------------
stderr:
--------------------------
--------------------------
`;
